Break line between label and input.
Makes input elements much larger, or allows another leafFieldset to fit
on the same row. Also more consistent view and visually better (no more
misalignment between value/input pairs).

--- a/style.css
+++ b/style.css
@@ -22,6 +22,11 @@
     flex: auto;
 }
 
+p input, p textarea {
+    width: 100%;
+    box-sizing: border-box;
+}
+
 .dynamicFields {
     width: 100%;
 }
