Add buttons to flip authors, and remove text that their order doesn't matter.
Author order does matter in codemeta, as the 'author' property has type '@list'.
Contributors order does not matter, though; but allowing them to be
reordered doesn't hurt, simplifies the code, and makes it easier to
delete one.

--- a/main.css
+++ b/main.css
@@ -38,6 +38,12 @@ p input, p textarea {
     width: 100%;
 }
 
+.dynamicFields .moveButtons {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
 #license {
     /* License names are long */
     min-width: 20em;
