--- a/main.css
+++ b/main.css
@@ -17,6 +17,14 @@
     display: inline-block;
 }
 
+.role {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+    list-style-type: none;
+    padding: 0;
+}
+
 #inputForm {
     max-width: 100%;
 
@@ -27,6 +35,7 @@
 /* A fieldset that contains only label/input pairs */
 .leafFieldset {
     flex: auto;
+    vertical-align: top;
 }
 
 p input, p textarea {
