--- a/codemeta.css
+++ b/codemeta.css
@@ -30,7 +30,7 @@
 
 /* This file contains extra CSS, that isn't needed for the application to be
  * usable, but it makes it more welcoming, and reuses a style similar to
- * Codemeta's main website.
+ * CodeMeta's main website.
  */
 
 body {
