Move roles along with person
- When person moves, moves roles with the person
- Add remove button to remove a person at any position in list

Signed-off-by: Arthit Suriyawongkul <arthit@gmail.com>

--- a/main.css
+++ b/main.css
@@ -51,6 +51,7 @@ p input, p textarea {
     width: 100%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 #license {
